RESOLVED FIXED184124
REGRESSION(r229480): ERROR: Unhandled web process message 'WebCookieManager:SetHTTPCookieAcceptPolicy'
https://bugs.webkit.org/show_bug.cgi?id=184124
Summary REGRESSION(r229480): ERROR: Unhandled web process message 'WebCookieManager:S...
Chris Dumez
Reported 2018-03-28 20:37:43 PDT
I frequently see this error on stderr when running the layout tests locally: ERROR: Unhandled web process message 'WebCookieManager:SetHTTPCookieAcceptPolicy'
Attachments
Patch (2.22 KB, patch)
2018-03-29 08:38 PDT, Brent Fulgham
cdumez: review+
Radar WebKit Bug Importer
Comment 1 2018-03-29 08:23:52 PDT
Brent Fulgham
Comment 2 2018-03-29 08:27:48 PDT
This started happening after Bug 183519, because that removed support in the WebContent process for receiving/handling this message. I should have removed the code in WebCookieManagerProxy::setHTTPCookieAcceptPolicy that spams the WebContent process with this changed state. The Network process (which is also messaged in that same place) is the only process that needs this information.
Brent Fulgham
Comment 3 2018-03-29 08:38:12 PDT
Brent Fulgham
Comment 4 2018-03-29 09:28:05 PDT
Note You need to log in before you can comment on or make changes to this bug.