REGRESSION(r229480): ERROR: Unhandled web process message 'WebCookieManager:SetHTTPCookieAcceptPolicy' https://bugs.webkit.org/show_bug.cgi?id=184124 <rdar://problem/38998971>

Reviewed by Chris Dumez.

Cookie accept policy messages were still being sent to the WebContent process after
I removed cookie access in r229480. The WebContent process no longer recognizes these
messages, and generates logging to that effect.

This patch stops sending these unnecessary messages to the WebContent process. Only the
Network process needs to receive this information.

* UIProcess/WebCookieManagerProxy.cpp:
(WebKit::WebCookieManagerProxy::setHTTPCookieAcceptPolicy):


Canonical link: https://commits.webkit.org/199707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230076 268f45cc-cd09-0410-ab3c-d52691b4dbfc